--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -1,12 +1,30 @@
-﻿<Window x:Class="App.MainWindow"
+﻿<Window x:Class="GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:App"
+        xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <StackPanel Orientation="Horizontal" Height="45" VerticalAlignment="Top" Background="#FF1F1F1F">
+            <Button x:Name="Home" Content="Home" HorizontalAlignment="Left" Margin="15,15,0,0" VerticalAlignment="Top" Click="HomeButton_Click" Width="60" Background="#FF494949"
+                    Foreground="White" FontWeight="SemiBold" BorderThickness="0">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="4"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button x:Name="History" Content="History" HorizontalAlignment="Left" Margin="15,15,0,0" VerticalAlignment="Top" Click="History_Click" Width="60" Background="#FF494949"
+                    Foreground="White" FontWeight="SemiBold" BorderThickness="0">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="4"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </StackPanel>
+        <Frame x:Name="Main" Margin="0,45,0,0" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
